# loopadrome

./: .gitignore  CMakeLists.txt  Makefile  README.md
src/: constants.h  main.c
src/core/: component.c  component.h  entity.c  entity.h
src/data/: avl_tree.h  list.c  list.h
src/demo/: dm_window_component.c  dm_window_component.h  dm_window_system.c  dm_window_system.h
src/demo2/: dm2_window.entity.c  dm2_window_component.c  dm2_window_component.h  dm2_window_entity.h  dm2_window_system.c  dm2_window_system.h
src/ecs/: component.c  component.h  entity.c  entity.h  system.c  system.h
src/game/: avl_tree.c  avl_tree.h  engine.c  engine.h  engine.txt  hashmap.c  hashmap.h  list.c  list.h
src/game/components/: size_2d_component.h
src/game/measurement/: size.h
src/game/window/: win_entity.c  win_entity.h  win_system.c  win_system.h
src/opengl/: error.c  error.h  gl_window.c  gl_window.h  window.c  window.h
src/test/: raw_testing.c  raw_testing.h
